# fanbox-extract

./: .env.example  .gitignore  README.md  check_auth.py  main.py  pyproject.toml  server.py  web_ui.py
docs/: component-library.md  testing.md  web-ui-architecture.md
fanbox_extractor/: __init__.py  bridge.py  downloader.py  drivers.py  extractor.py  markdown_i18n.py  patreon_downloader.py  utils.py  web_ui_core.py  web_ui_v2.py
fanbox_extractor/drivers/: __init__.py  google_drive.py  mega.py
server/: package-lock.json  package.json
server/src/: index.ts  python-bridge.ts
tests/e2e/: test_web_ui_http_smoke.py
tests/integration/: test_file_preview_flow.py
tests/unit/: test_downloader_pipeline.py  test_web_ui_core.py
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/files/: page.tsx
web/app/logs/: page.tsx
web/app/settings/: page.tsx
web/components/: sidebar.tsx
web/components/ui/: select-native.tsx  use-toast.ts
web/lib/: api.ts  socket.tsx
