[project]
name = "fanbox-extract"
version = "0.1.0"
description = "A powerful tool to download content from pixivFANBOX creators, supporting images, files, and external links extraction."
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "gdown>=5.2.1",
    "mega-py==1.0.8",
    "nicegui>=3.8.0",
    "pypdf>=6.7.5",
    "rarfile>=4.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
