[project]
name = "fanbox-extract"
version = "0.1.0"
description = "A powerful tool to download content from pixivFANBOX creators, supporting images, files, and external links extraction."
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "gdown>=5.2.1",
    "mega-py==1.0.8",
    "nicegui>=3.8.0",
    "py7zr>=0.22.0",
    "pydantic>=2.12.5",
    "pypdf>=6.7.5",
    "python-dotenv>=1.1.1",
    "rarfile>=4.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
